--- a/lib/components/Hello/Hello.module.scss
+++ b/lib/components/Hello/Hello.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
-  background-color: #fefefe;
+  background-color: #000;
+  color: #fff;
   width: 100%;
   height: 5vh;
 }
